# industrial-stack

./: .gitignore  Dockerfile  Dockerfile.scratch  README.md  deno.config.json  package-lock.json  package.json  server.ts
.github/workflows/: deploy.yml
app/: root.tsx
app/routes/: index.tsx
rustlib/: Cargo.toml
rustlib/src/: lib.rs
