[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustlib"       # The name of the target.
path = "src/lib.rs"    # The source file of the target.
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.61"